--- a/checkout.html
+++ b/checkout.html
@@ -145,7 +145,7 @@
       <section id="product-checkout" class="w-1/3 bg-white rounded-lg py-5">
         <section
           id="container-products-checkout"
-          class="h-4/5 overflow-y-auto px-2"></section>
+          class="h-4/5 overflow-y-auto px-2 flex flex-col items-center"></section>
         <section
           id="cell-checkout"
           class="flex flex-col px-2 h-1/5 justify-around">
