--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="./assets/img/logo_maior.ico" type="image/x-icon">
+    <title>WillTube Magazine</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -152,7 +153,7 @@
           <p
             id="total-price"
             class="bg-slate-200 text-green-800 rounded-lg pl-5">
-            Total $ 200
+            Total $0
           </p>
           <button
             class="bg-slate-900 text-slate-200 p-1 rounded-sm hover:bg-slate-800"
