--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="./assets/img/logo_maior.ico" type="image/x-icon">
+    <title>WillTube Magazine</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -28,9 +29,7 @@
       <section
         id="cart-products"
         class="h-3/5 overflow-y-auto flex flex-col gap-2"></section>
-      <p id="total-price" class="bg-slate-200 text-green-700 rounded-sm pl-5">
-        Total $ 200
-      </p>
+      <p id="total-price" class="bg-slate-200 text-green-700 rounded-sm pl-5"></p>
       <button id="finish-order" class="bg-slate-200 text-slate-900 p-1 rounded-sm hover:bg-slate-900 hover:text-slate-200">
         Finish Order
       </button>
