--- a/orders.html
+++ b/orders.html
@@ -5,7 +5,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="./assets/img/logo_maior.ico" type="image/x-icon">
+    <title>WillTube Magazine</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
